@@ -14,6 +14,7 @@
         <news>
 2.2.0
 [add] Search history
+[add] Settings - Maintenance
 [fix] VodCast highlighting
 2.1.1
 [fix] video default qualities
